Fixed commands